MDEV-12846 sql_mode=ORACLE: using Oracle-style placeholders in direct query execution makes the server crash